# libPessoaEndereco

./: README.md  pyproject.toml
.github/workflows/: test_and_samples.yml
lib/: requirements.txt
lib/src/: main.py  setup.py
lib/src/controller/: endereco.py  generic.py  pessoa.py
lib/src/model/: dto.py  models.py
lib/src/service/: base.py
lib/src/test/: test_samples.py
